# sourcy

./: .gitattributes  .gitignore  ApplicationUsage.cpp  ApplicationUsage.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  CNSASTToCPPStage.cpp  CNSASTToCPPStage.h  CNSASTToLUAStage.cpp  CNSASTToLUAStage.h  CNSCheckSemanticActions.cpp  CNSCheckSemanticActions.h  CNSCheckStage.cpp  CNSCheckStage.h  CNSCodeBlock.cpp  CNSCodeBlock.h  CNSCodeBlockType.h  CNSControllerElement.cpp  CNSControllerElement.h  CNSControllerUsage.h  CNSDataType.cpp  CNSDataType.h  CNSFileToAST.cpp  CNSFileToAST.h  CNSFrontEndPipeline.cpp  CNSFrontEndPipeline.h  CNSGrammarInclude.h  CNSParserStuff.h  CNSSemanticActions.cpp  CNSSemanticActions.h  CNSSemantics.cpp  CNSSemantics.h  CNSSemanticsDefinitions.h  CPPBackEndPipeline.cpp  CPPBackEndPipeline.h  CPPGenSemanticActions.cpp  CPPGenSemanticActions.h  CPPPostGenerator.cpp  CPPPostGenerator.h  (+38 more)
.github/workflows/: cmake-multi-platform.yml
Grammars/: cns.g  cns.g3pl  cnscheck.g  cppgen.g  def.g  luagen.g
tests/: cnstest.txt
tests/cns/: cloudcommon.cns  cloudi.cmd  cloudi.cns
tests/cpp/: Cloudi_master.cpp  Cloudi_master.h  cloudcommon.cpp  cloudi.cpp  cloudi_cmd.cpp
tests/lua/: Cloudi_master.lua  cloudcommon.lua  cloudi.lua  cloudi_cmd.lua
